fix 虚拟物品数量 多方块结构编码 无线数据仓配方 pcb工厂预览 (#319)